# Q-A-Dataset-Generator

./: .gitignore  README.md  app.py  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt
qa_generator/: __init__.py  benchmarks.py  chunking.py  exporter.py  generator.py  ingestion.py  llm.py  pipeline.py  quality.py
tests/: test_chunking.py  test_exporter.py  test_generator.py  test_ingestion.py  test_pipeline.py  test_quality.py
