[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-generator"
version = "0.1.0"
description = "Generate Q&A datasets from PDF, TXT, or CSV files using LLMs."
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "streamlit>=1.35.0",
    "openai>=1.30.0",
    "pymupdf>=1.24.0",
    "langchain-text-splitters>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
qa-generator = "cli:app"
